--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "paternainbackend2",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2",
-    "mongodb": "^6.2.0",
-    "mongoose": "^8.0.0"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.5.7",
-    "dotenv": "^16.3.1",
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.1",
-    "supertest": "^6.3.3"
-  }
+	"name": "paternainbackend2",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node server.js",
+		"dev": "nodemon server.js",
+		"test": "jest",
+		"prettier": "npx prettier . --write"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"express": "^4.18.2",
+		"mongodb": "^6.2.0",
+		"mongoose": "^8.0.0"
+	},
+	"devDependencies": {
+		"@types/jest": "^29.5.7",
+		"dotenv": "^16.3.1",
+		"eslint": "^8.53.0",
+		"eslint-config-prettier": "^9.0.0",
+		"jest": "^29.7.0",
+		"nodemon": "^3.0.1",
+		"prettier": "3.1.0",
+		"supertest": "^6.3.3"
+	}
 }
