--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "node server.js",
+		"start": "SET NODE_ENV=production&& node server.js",
+		"start:dev": "SET NODE_ENV=development&& node server.js",
 		"dev": "nodemon server.js",
 		"test": "jest",
 		"prettier": "npx prettier . --write"
